--- a/sections/implementazione.tex
+++ b/sections/implementazione.tex
@@ -37,4 +37,4 @@ In questo capitolo si propongono degli esempi per gli oggetti utilizzati più di
 \label{impadvinterno}
 
 \subsection{Output}
-\label{impadvoutput}
+\label{advoutput}
