--- a/sections/references.bib
+++ b/sections/references.bib
@@ -17,3 +17,12 @@
   publisher={Springer}
 }
 
+@misc{github:dgarepo,
+  author = {Andrey Abakumov},
+  title = {DGA},
+  mail = {andrewaeva@ya.ru},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/andrewaeva/DGA}}
+  }
+
