modifiche sezione Progetto

--- a/main.tex
+++ b/main.tex
@@ -209,6 +209,7 @@ Anno Accademico 2017/2018}}
 \input{sections/statodellarte}
 \input{sections/progetto}
 \input{sections/implementazione}
+\input{sections/risultati}
 \input{sections/conclusioni}
 
 
