--- a/sections/introduzione.tex
+++ b/sections/introduzione.tex
@@ -6,7 +6,7 @@ In questo capitolo si propongono degli esempi per gli oggetti utilizzati più di
 \section{Citazioni}
 \label{citazioni}
 
-Inserisco qualche citazione per mostrare la bibliografia. Per gli articoli accademici è quasi sempre possibile reperire i blocchi da inserire nel file bib da scholar~\cite{google:scholar}, come ad esempio~\cite{feige:zero}. Scholar in questo caso è una risorsa/sito online e per questo. Precediamo le citazione da uno spazio indivisibile tramite il carattere \textasciitilde.
+Inserisco qualche citazione per mostrare la bibliografia. Per gli articoli accademici è quasi sempre possibile reperire i blocchi da inserire nel file bib da scholar, come ad esempio. Scholar in questo caso è una risorsa/sito online e per questo. Precediamo le citazione da uno spazio indivisibile tramite il carattere \textasciitilde.
 
 \section{Oggetti float}
 \label{oggetti-float}
