--- a/sections/references.bib
+++ b/sections/references.bib
@@ -1,21 +1,11 @@
-@misc{google:scholar,
-  author = {{Google}},
-  title = "Google Scholar",
-  howpublished = "\url{https://scholar.google.it/}",
+@misc{amazon:alexa,
+  author = {{Amazon}},
+  title = "Alexa",
+  howpublished = "\url{https://www.alexa.com/}",
   month = "visited in Sep.",
-  year = "2016"
+  year = "2017"
 }
 
-@article{feige:zero,
-  title={Zero-knowledge proofs of identity},
-  author={Feige, Uriel and Fiat, Amos and Shamir, Adi},
-  journal={Journal of cryptology},
-  volume={1},
-  number={2},
-  pages={77--94},
-  year={1988},
-  publisher={Springer}
-}
 
 @misc{github:dgarepo,
   author = {Andrey Abakumov},
@@ -25,4 +15,5 @@
   journal = {GitHub repository},
   howpublished = {\url{https://github.com/andrewaeva/DGA}}
   }
+
 
