modifiche sezione Progetto e bibliografia

--- a/main.tex
+++ b/main.tex
@@ -21,6 +21,7 @@
 \usepackage{listings}
 \usepackage{url}
 \usepackage[hidelinks]{hyperref}
+\usepackage{todonotes}
 % custom colors
 \usepackage{color}
 \definecolor{light-gray}{gray}{0.96}
@@ -226,7 +227,7 @@ Anno Accademico 2017/2018}}
 
 
 \begin{flushleft}
-\bibliographystyle{plain}
+\bibliographystyle{ieeetr}
 \bibliography{sections/references} 
 \end{flushleft}
 
