--- a/sections/implementazione.tex
+++ b/sections/implementazione.tex
@@ -1,10 +1,12 @@
 \chapter{Implementazione}
 \label{implementazione}
 
-In questo capitolo si propongono degli esempi per gli oggetti utilizzati più di frequente in latex: la Sezione~\ref{citazioni} descrive come scrivere citazioni, la Sezione~\ref{oggetti-float} propone degli esempi di oggetti float, la Sezione~\ref{compilazione} descrive come compilare questo documento.
+
 
 \section{Classificatore Random Forest}
 \label{imprandomforest}
+\todo{ottenere i parametri di randomforest del miglior risultato}
+\todo{differenze pratiche tra RF, SVM, GNB}
 
 \subsection{Input}
 \label{imprandomforestinput}
