--- a/sections/references.bib
+++ b/sections/references.bib
@@ -6,14 +6,81 @@
   year = "2017"
 }
 
-
 @misc{github:dgarepo,
-  author = {Andrey Abakumov},
+  author = {A. Abakumov},
   title = {DGA},
   mail = {andrewaeva@ya.ru},
   publisher = {GitHub},
   journal = {GitHub repository},
-  howpublished = {\url{https://github.com/andrewaeva/DGA}}
+  howpublished = {\url{https://github.com/andrewaeva/DGA}},
+  month = "visited in Sep.",
+  year = "2017"
   }
 
+@inproceedings {180232,
+author = {Manos Antonakakis and Roberto Perdisci and Yacin Nadji and Nikolaos Vasiloglou and Saeed Abu-Nimeh and Wenke Lee and David Dagon},
+title = {From Throw-Away Traffic to Bots: Detecting the Rise of DGA-Based Malware},
+booktitle = {Presented as part of the 21st {USENIX} Security Symposium ({USENIX} Security 12)},
+year = {2012},
+isbn = {978-931971-95-9},
+address = {Bellevue, WA},
+pages = {491--506},
+url = {https://www.usenix.org/conference/usenixsecurity12/technical-sessions/presentation/antonakakis},
+publisher = {{USENIX}}
+}
+
+@inproceedings{Yadav:2010:DAG:1879141.1879148,
+ author = {Yadav, Sandeep and Reddy, Ashwath Kumar Krishna and Reddy, A.L. Narasimha and Ranjan, Supranamaya},
+ title = {Detecting Algorithmically Generated Malicious Domain Names},
+ booktitle = {Proceedings of the 10th ACM SIGCOMM Conference on Internet Measurement},
+ series = {IMC '10},
+ year = {2010},
+ isbn = {978-1-4503-0483-2},
+ location = {Melbourne, Australia},
+ pages = {48--61},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/1879141.1879148},
+ doi = {10.1145/1879141.1879148},
+ acmid = {1879148},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {components, domain names, entropy, malicious}
+} 
+
+@article{Yadav:2012:DAG:2428696.2428722,
+ author = {Yadav, Sandeep and Reddy, Ashwath Kumar Krishna and Reddy, A. L. Narasimha and Ranjan, Supranamaya},
+ title = {Detecting Algorithmically Generated Domain-flux Attacks with DNS Traffic Analysis},
+ journal = {IEEE/ACM Trans. Netw.},
+ issue_date = {October 2012},
+ volume = {20},
+ number = {5},
+ month = oct,
+ year = {2012},
+ issn = {1063-6692},
+ pages = {1663--1677},
+ numpages = {15},
+ url = {http://dx.doi.org/10.1109/TNET.2012.2184552},
+ doi = {10.1109/TNET.2012.2184552},
+ acmid = {2428722},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+ keywords = {IP fast flux, components, domain flux, domain names, edit distance, entropy, jaccard index, malicious}
+} 
+
+@Inbook{Schiavoni2014,
+author="Schiavoni, Stefano
+and Maggi, Federico
+and Cavallaro, Lorenzo
+and Zanero, Stefano",
+editor="Dietrich, Sven",
+title="Phoenix: DGA-Based Botnet Tracking and Intelligence",
+bookTitle="Detection of Intrusions and Malware, and Vulnerability Assessment: 11th International Conference, DIMVA 2014, Egham, UK, July 10-11, 2014. Proceedings",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="192--211",
+isbn="978-3-319-08509-8",
+doi="10.1007/978-3-319-08509-8_11",
+url="https://doi.org/10.1007/978-3-319-08509-8_11"
+}
 
