--- a/sections/references.bib
+++ b/sections/references.bib
@@ -84,3 +84,10 @@ doi="10.1007/978-3-319-08509-8_11",
 url="https://doi.org/10.1007/978-3-319-08509-8_11"
 }
 
+@article{geffner2013end,
+  title={End-to-end analysis of a domain generating algorithm malware family},
+  author={Geffner, Jason},
+  journal={Black Hat USA},
+  volume={2013},
+  year={2013}
+}
