--- a/sections/references.bib
+++ b/sections/references.bib
@@ -6,6 +6,19 @@
   year = "2017"
 }
 
+@misc{icann,
+	author = {{ICANN}},
+	howpublished = "\url{https://www.icann.org/}"}
+	}
+
+@misc{dgacsvresource,
+  author = {Jay Jacobs and Bob Rudis},
+  title = "Data Driven Security",
+  howpublished = "\url{http://datadrivensecurity.info/blog/pages/dds-dataset-collection.html}",
+  month = "visited in Sep.",
+  year = "2017"
+}
+
 @misc{github:dgarepo,
   author = {A. Abakumov},
   title = {DGA},
